--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,15 +72,18 @@
   </li>
   <div class="dropdown-menu">
     <div class="dropdown-item">
-    	<p class="sub-label-txt">ORGANIZATION</p>
-    	<p>Bank of American,N.A.</p>
-    	<p>(121898, 153552,161026,9000004)</p>
+    	<div class="sub-label-txt">ORGANIZATION</div>
+    	<div>Bank of American,N.A.<br>
+    	(121898, 153552,161026,9000004)
+    	</div>
     </div>
     <div class="dropdown-item">
-    	BRANCH<br>73209
+    	<div class="sub-label-txt">BRANCH</div>
+    	<div>73209</div>
     </div> 
     <div class="dropdown-item">
-    	SELLER/SERVICER<br>121898
+    	<div class="sub-label-txt">SELLER/SERVICER</div>
+    	<div>121898</div>
     </div>
     <div class="dropdown-divider"></div>
     <a href="" class="dropdown-item underline">Change User Context</a>
