--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,10 @@
 	    Loans
 	  </li>
 	  <div class="dropdown-menu">
-	    <a href class="dropdown-item" *ngFor="let loan of dropdownLoan">
-	      {{loan.text}}
-	    </a>
+	    <a href class="dropdown-item">Take out Cash Contract</a>
+	    <a href class="dropdown-item">Remove Loans from Contract</a>
+	    <a href class="dropdown-item">Import Guarantor Contracts</a>	     
+	    
 	  </div>
 	</ngb-dropdown>
 	</li>
@@ -32,9 +33,10 @@
 	    Bills
 	  </li>
 	  <div class="dropdown-menu">
-	    <a href class="dropdown-item" *ngFor="let bill of dropdownBill">
-	      {{bill.text}}
-	    </a>
+	    <a href class="dropdown-item">Form 1034E</a>
+	    <a href class="dropdown-item">Note Delivery Cover Sheet</a>
+	    <a href class="dropdown-item">Bill of Sale ID</a>  
+	    
 	  </div>
 	</ngb-dropdown>
 	</li>
@@ -45,9 +47,10 @@
 	    Contracts
 	  </li>
 	  <div class="dropdown-menu">
-	    <a href class="dropdown-item" *ngFor="let contract of dropdownContract">
-	      {{contract.text}}
-	    </a>
+	    <a href="" class="dropdown-item">Take of Guarantor Contract</a>
+	    <a href="" class="dropdown-item">Pair of Contract</a>
+	    <a href="" class="dropdown-item">View Import Contract Results</a> 
+	    
 	  </div>
 	</ngb-dropdown>
 	</li>
