--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <body width="100%">
 <ul id="ul_top">
 	<li>
-	<ngb-dropdown>
-	  <li ngb-dropdown-togglee class="main btn">
+	<app-dropdown>
+	  <li app-dropdown-collapse class="main btn">
 	    Contracts
 	  </li>
 	  <div class="dropdown-menu">
@@ -10,40 +10,38 @@
 	      {{menu.text}}
 	    </a>
 	  </div>
-	</ngb-dropdown>
+	</app-dropdown>
 	</li>
 
 	<li>
-	<ngb-dropdown>
-	  <li ngb-dropdown-togglee class="main btn">
+	<app-dropdown>
+	  <li app-dropdown-collapse class="main btn">
 	    Loans
 	  </li>
 	  <div class="dropdown-menu">
 	    <a href class="dropdown-item">Take out Cash Contract</a>
 	    <a href class="dropdown-item">Remove Loans from Contract</a>
 	    <a href class="dropdown-item">Import Guarantor Contracts</a>	     
-	    
 	  </div>
-	</ngb-dropdown>
+	</app-dropdown>
 	</li>
 
 	<li>
-	<ngb-dropdown>
-	  <li ngb-dropdown-togglee class="main btn">
+	<app-dropdown>
+	  <li app-dropdown-collapse class="main btn">
 	    Bills
 	  </li>
 	  <div class="dropdown-menu">
 	    <a href class="dropdown-item">Form 1034E</a>
 	    <a href class="dropdown-item">Note Delivery Cover Sheet</a>
-	    <a href class="dropdown-item">Bill of Sale ID</a>  
-	    
+	    <a href class="dropdown-item">Bill of Sale ID</a>     
 	  </div>
-	</ngb-dropdown>
+	</app-dropdown>
 	</li>
 
 	<li>
-	<ngb-dropdown>
-	  <li ngb-dropdown-togglee class="main btn">
+	<app-dropdown>
+	  <li app-dropdown-collapse class="main btn">
 	    Contracts
 	  </li>
 	  <div class="dropdown-menu">
@@ -52,12 +50,12 @@
 	    <a href="" class="dropdown-item">View Import Contract Results</a> 
 	    
 	  </div>
-	</ngb-dropdown>
+	</app-dropdown>
 	</li>
 
 	<li class="right">
-	<ngb-dropdown>
-	  <li class="main btn margin_right15" ngb-dropdown-togglee>
+	<app-dropdown>
+	  <li class="main btn margin_right15" app-dropdown-collapse>
 	    121898 &raquo;
 	  </li>
 	  <div class="dropdown-menu">
@@ -78,7 +76,7 @@
 	    <div class="dropdown-divider"></div>
 	    <a href="" class="dropdown-item underline">Change User Context</a>
 	  </div>
-	</ngb-dropdown>
+	</app-dropdown>
 	</li>
 </ul>
 </body>
