--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,7 @@
 
 ul {
     margin-top: 15px;
+    display: inline-block;
 }
 
 li {
@@ -39,7 +40,7 @@ li {
     right: 4px;
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    width: 300px;
+    width: auto;
 }
 
 .underline {
